[tool.poetry]
name = "rest-framework-material"
version = "0.1.4"
description = "Redesign of the browsable api of Django REST Framework using MD Bootstrap"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rest_framework_material"}]
homepage = "https://github.com/youzarsiph/rest-framework-material/"
repository = "https://github.com/youzarsiph/rest-framework-material/"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
