[tool.poetry]
name = "drf-material"
version = "0.2.8"
description = "Material design for Django REST Framework API"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "drf_material"}]
homepage = "https://github.com/youzarsiph/drf-material/"
repository = "https://github.com/youzarsiph/drf-material/"

[tool.poetry.dependencies]
python = ">=3.7"
django = ">=3.0"
djangorestframework = ">=3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
